src/ports/postgres/modules/stats/test/cox_proportional_hazards.sql_in
/* -----------------------------------------------------------------------------
 * Cox proportional hazard survival regression
 *
 * Both Example taken from:
 * http://www.sph.emory.edu/~cdckms/CoxPH/prophaz2.html
 * -------------------------------------------------------------------------- */

m4_include(`SQLCommon.m4')
m4_changequote(<!,!>)
m4_ifdef(<!__HAS_ORDERED_AGGREGATES__!>,<!

DROP TABLE IF EXISTS leukemia;
CREATE TABLE leukemia (
    id INTEGER NOT NULL,
    grp DOUBLE PRECISION,
    wbc DOUBLE PRECISION,
    timeDeath INTEGER,
    status DOUBLE PRECISION,
    CONSTRAINT pk_leukemia PRIMARY key (id)
);


INSERT INTO leukemia(id, grp, wbc, timeDeath,status) VALUES
(0,0,1.45,35,1),
(1,0,1.47,34,1),
(3,0,2.2,32,1),
(4,0,1.78,25,1),
(5,0,2.57,23,1),
(6,0,2.32,22,1),
(7,0,2.01,20,1),
(8,0,2.05,19,1),
(9,0,2.16,17,1),
(10,0,3.6,16,1),
(11,1,2.3,15,1),
(12,0,2.88,13,1),
(13,1,1.5,12,1),
(14,0,2.6,11,1),
(15,0,2.7,10,1),
(16,0,2.8,9,1),
(17,1,2.32,8,1),
(18,0,4.43,7,1),
(19,0,2.31,6,1),
(20,1,3.49,5,1),
(21,1,2.42,4,1),
(22,1,4.01,3,1),
(23,1,4.91,2,1),
(24,1,5,1,1);


SELECT assert(
    relative_error(coef, ARRAY[2.5444, 1.6718]) < 1e-2 AND
    relative_error(loglikelihood, -37.8532) < 1e-2 AND
    relative_error(std_err, ARRAY[0.6773,0.3873]) < 1e-2 AND
    relative_error(z_stats, ARRAY[3.7567,4.3165]) < 1e-2 AND
    relative_error(p_values, ARRAY[0.000172,0.00001584]) < 1e-2,  
    'Cox-Proportional hazards (unique time of death): Wrong results'
) FROM (
		SELECT (cox_prop_hazards_regr(
    'leukemia', 'ARRAY[grp, wbc]', 'timeDeath', 'status', 20, 'newton',  0.001
		)).*
) q;

DROP TABLE IF EXISTS tmp_out;
SELECT cox_prop_hazards('leukemia', 'tmp_out', 'timeDeath', 'ARRAY[grp, wbc]', 'status');
SELECT * from tmp_out;

DROP TABLE IF EXISTS leukemia;
CREATE TABLE leukemia (
    id INTEGER NOT NULL,
    grp DOUBLE PRECISION,
    wbc DOUBLE PRECISION,
    timeDeath INTEGER,
    status DOUBLE PRECISION,
    CONSTRAINT pk_leukemia PRIMARY key (id)
);

INSERT INTO leukemia(id, grp, wbc, timeDeath, status) VALUES
(1,0,1.45,35,1),
(2,0,1.47,34,1),
(3,0,2.2,32,1),
(4,0,2.53,32,1),
(5,0,1.78,25,1),
(6,0,2.57,23,1),
(7,0,2.32,22,1),
(8,0,2.01,20,1),
(9,0,2.05,19,1),
(10,0,2.16,17,1),
(11,0,3.6,16,1),
(12,0,2.88,13,1),
(13,0,2.6,11,1),
(14,0,2.7,10,1),
(15,0,2.96,10,1),
(16,0,2.8,9,1),
(17,0,4.43,7,1),
(18,0,3.2,6,1),
(19,0,2.31,6,1),
(20,0,4.06,6,1),
(21,0,3.28,6,1),
(22,1,1.97,23,1),
(23,1,2.73,22,1),
(24,1,2.95,17,1),
(25,1,2.3,15,1),
(26,1,1.5,12,1),
(27,1,3.06,12,1),
(28,1,3.49,11,1),
(29,1,2.12,11,1),
(30,1,3.52,8,1),
(31,1,3.05,8,1),
(32,1,2.32,8,1),
(33,1,3.26,8,1),
(34,1,3.49,5,1),
(35,1,3.97,5,1),
(36,1,4.36,4,1),
(37,1,2.42,4,1),
(38,1,4.01,3,1),
(39,1,4.91,2,1),
(40,1,4.48,2,1),
(41,1,2.8,1,1),
(42,1,5,1,1);

-- Values computed with Madlib
SELECT assert(
    relative_error(coef, ARRAY[0.6987, 1.4148]) < 1e-2 AND
    relative_error(loglikelihood, -100.5537) < 1e-2 AND
    relative_error(std_err, ARRAY[0.3483,0.2743]) < 1e-2 AND
    relative_error(z_stats, ARRAY[2.0057,5.1563]) < 1e-2 AND
    relative_error(p_values, ARRAY[0.0448,0.000000025185]) < 1e-2,  
    'Cox-Proportional hazards (tied times of death): Wrong results'
) FROM (
		SELECT (cox_prop_hazards_regr(
    'leukemia', 'ARRAY[grp, wbc]', 'timeDeath', 'status', 20, 'newton',  0.001
		)).*
) q;

!>)
m4_changequote(<!`!>,<!'!>)
